fixed heading stacking on mobile

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ h1 {
     color: #FFFFFF;
     font-family: helvetica;
     font-size: 40px;
-    line-height: 20px;
+    line-height: 45px;
     text-align: center;
 }
 
